package com.devindie.myday.core.constants

const val DEFAULT_STORE_NAME = "Good Games Belconnen"
